<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/smallPadding">

    <EditText
        android:id="@+id/editText_add_ques"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Black"
        android:hint="@string/enterQues"
        android:gravity="center"
        android:textSize="@dimen/regularTextSize"
        android:minHeight="@dimen/minHeight"
        android:minWidth="@dimen/minWidth"
        app:layout_constraintBottom_toTopOf="@id/radioGroup_addQues"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text"
        android:importantForAutofill="no"/>

    <RadioGroup
        android:id="@+id/radioGroup_addQues"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editText_add_ques"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/okBtn_addQues"
        >
        <RadioButton
            android:id="@+id/true_addQues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trueBtn"
            />
        <RadioButton
            android:id="@+id/false_addQues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/falseBtn"
            />
    </RadioGroup>
    <Button
        android:id="@+id/okBtn_addQues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        app:layout_constraintTop_toBottomOf="@id/radioGroup_addQues"
        app:layout_constraintEnd_toStartOf="@id/cancelBtn_addQues"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <Button
        android:id="@+id/cancelBtn_addQues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/radioGroup_addQues"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/okBtn_addQues"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>